tests/fail/deprecated_union.stderr
error[E0470]: Bare union is deprecated and removed in Toka. Use Tagged Enum or explicit type structure with 'core/mem::bit_cast' instead.
 --> tests/fail/deprecated_union.tk:6:15
  |
 6 | shape MyUnion(as i32 | as f32)
  |               ^
